# rusty-exchange

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  README_RMQ.md  commitlint.config.cjs  docker-compose.yaml  rmq_enabled_plugins
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: test.yml
api/: Cargo.toml  Dockerfile  README.md
api/src/: .env  lib.rs
api/src/jobs/: broadcaster.rs  mdg_broadcaster.rs  mod.rs
api/src/models/: client.rs  error.rs  errors.rs  fill.rs  market.rs  mod.rs  order.rs  position.rs  stream.rs  sub_account.rs
api/src/routes/: clients.rs  fills.rs  markets.rs  mod.rs  orders.rs  positions.rs  sub_accounts.rs
api/src/util/: errors.rs
common/: Cargo.toml
common/src/: lib.rs  rabbitmq.rs  util.rs
database/: Cargo.toml  Dockerfile  README.md  generate_entities.sh
database/src/: lib.rs  main.rs  main2.rs
database/src/core/: engine.rs  mod.rs  mutation.rs  query.rs
database/src/entities/: clients.rs  fills.rs  markets.rs  mod.rs  orders.rs  positions.rs  prelude.rs  sea_orm_active_enums.rs  sub_accounts.rs
database/src/migrator/: m20220101_000001_create_table.rs  mod.rs
database/src/models/: mod.rs
database/tests/: mock.rs  prepare.rs
database/tests/mock/: mutation.rs  query.rs
orderbook/: Cargo.toml  Dockerfile
orderbook/src/: lib.rs  queue.rs
rabbitmq/: Cargo.toml  README.md
rabbitmq/src/: main.rs
src/: main.rs
