[package]
name = "rusty-exchange"
version = "0.0.0"
edition = "2021"
authors = ["ivanjericevich96@gmail.com"]
description = "A workspace for a fullstack app written entirely in Rust"
readme = "README.md"
keywords = [""]
publish = false

[workspace]
members = [".", "api", "database", "orderbook"]

[dependencies]
api = { path = "api" }
orderbook = { path = "orderbook" }
database = { path = "database" }
async-std = { version = "^1", features = ["attributes", "tokio1"] } # Standard async library

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "database_manager"
path = "src/bin/database_manager.rs"

[[bin]]
name = "matching_engine"
path = "src/bin/matching_engine.rs"

[profile.release] # Performance optimization at cost of longer build time
lto = true
