[package]
name = "rusty-exchange"
version = "0.0.0"
edition = "2021"
authors = ["ivanjericevich96@gmail.com"]
description = "A workspace for a financial exchange architecture written entirely in Rust."
readme = "README.md"
keywords = [""]
publish = false

[workspace]
members = [".", "api", "database", "orderbook"]

[dependencies]
api = { path = "api" }
orderbook = { path = "orderbook" }
database = { path = "database" }
rabbitmq-stream-client = "0.1.0"
tokio = "1.25.0" # TODO: tokio vs async-std

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "database_manager"
path = "src/bin/database_manager.rs"

[[bin]]
name = "matching_engine"
path = "src/bin/matching_engine.rs"

[profile.release] # Performance optimization at cost of longer build time
lto = true
