[package]
name = "api"
version = "0.0.0"
edition = "2021"
authors = ["ivanjericevich96@gmail.com"]
description = "A crate for the management of a postgresql database and the versions thereof using an asynchronous ORM"
readme = "README.md"
keywords = ["actix-web", "swagger", "async"]
publish = false

[dependencies]
actix-web = "4" # Framework
serde = { version = "1.0.147", features = ["derive"] } # Serialization and deserialization of entities
serde_json = "1.0.87"
utoipa = { version = "2.3.0", features = ["actix_extras", "json"] } # OpenApi schema
utoipa-swagger-ui = { version = "2.0.1", features = ["actix-web"] } # Generate swagger UI
database = { path = "../database" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] } # Log SQL commands
derive_more = "0.99.17"

[dev-dependencies]
cargo-watch = "8.1.2"
