[package]
name = "api"
version = "0.0.0"
edition = "2021"
authors = ["ivanjericevich96@gmail.com"]
description = "A library crate for a RESTful API which will serve and receive data to/from a user via the http protocol."
readme = "README.md"
keywords = ["actix-web", "swagger", "async"]
publish = false

[dependencies]
actix-web = "4" # Framework
serde = { version = "1.0.147", features = ["derive"] } # Serialization and deserialization of entities
serde_json = "1.0.87"
utoipa-swagger-ui = { version = "3.0.1", features = ["actix-web"] } # Generate swagger UI
database = { path = "../database" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] } # Log SQL commands
derive_more = "0.99.17"
chrono = "0.4.23"
rabbitmq-stream-client = "0.1.0"
parking_lot = "0.12.1"
actix-web-lab = "0.18.9"
futures = "0.3.26"
