[package]
name = "common"
version = "0.0.0"
edition = "2021"
authors = ["ivanjericevich96@gmail.com"]
description = "A crate for general utilities/functionalities that common across the project."
readme = "README.md"
keywords = ["rabbitmq", "async"]
publish = false

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
futures = "0.3.26"
rabbitmq-stream-client = "0.1.0"
serde = "1.0.152"
serde_json = "1.0.93"
