[package]
name = "orderbook"
version = "0.0.0"
edition = "2021"
authors = ["ivanjericevich96@gmail.com"]
description = "A library crate for the matching and storage of incoming orders in a limit order book."
readme = "README.md"
keywords = ["orderbook,", "matching engine"]
publish = false

[dependencies]
common = { path = "../common" }
chrono = "0.4.23"
database = { path = "../database" }
async-recursion = "1.0.2"

[dev-dependencies]
async-std = "1.12.0" # TODO: Tokio?